Fixes margins and spacing

--- a/css/main.css
+++ b/css/main.css
@@ -3,40 +3,58 @@ html {
   font-family: "Open Sans";
   margin: 0;
   padding: 0;
+  line-height: 1.4;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
 }
 
+body {
+  max-height: 500px;
+  margin: 0;
+}
+
+span {
+  background: rgba(0, 0, 0, .5);
+}
+
 h2 {
   font-size: 4rem;
-  background: rgba(0, 0, 0, .5);
+  color: #fff;
+  margin: 0;
+  padding: 0;
 }
 
 p {
   font-size: 2rem;
+  font-style: italic;
+}
+
+div img .img-flex {
+  display: block;
 }
 
 .img-flex {
-  display: block;
   width: 100%;
+  display: block;
 }
 
 .banner {
   margin: 0;
   padding: .3rem 1rem;
+  transform: translate(10px, 0);
   position: absolute;
-  bottom: 0;
-  left: 0;
+
+  /* left: 100px;
+  bottom: 100px; */
+
   max-width: 50em;
   overflow: hidden;
 }
 
 header {
   position: relative;
-  max-height: 500px;
 }
-
 
 
